   a possibility that the association was destroyed. However no way
   was it possible to communicate that fact to the calling timeout
   handler. Thus it was possible that a chunk_output would be
   called on an association that was free... very bad. This is
   all fixed and now all t-o functions that do threshold mangagment
   must return 0 for ok and 1 for association destroyed.
9) Got rid of  an used define in sctp_constants.h
10) Rewrite IPv4 src address selection and fixed bound specific
    IPv6 src address selection.
11) Missing return when already in SHUTDOWN-RECIEVED.
12) Improper memset found by Marko Lindholm in the libsctp.a code
    for sctp_bindx.
13) Fix the stream reset functions to use the parameters properly
    per the newly forming draft. Still have a bug here where
    we can loose multiple stream resets (labeled with FIXME)
14) Kernel changes for sctp_sendx()
15) Kernel changes for MSG_SENDALL flag
16) sctp lib adde of sctp_sendx()


Patch 25)

1) Link Local addresses for V6 where the ll address
   is included implicitly would make a false decision to
   NOT list addresses. This has been fixed.
2) Fix switch back after failure
3) We run only one RTO timer. In the timing of
   things we would compare to any dest that had been
   idle longer than the HB-Delay value.. This is
   incorrect, we should take the longest value and
   HB if its greater than the RTO.
4) Fixed shutdown-received state so we get the
   shutdown and not return without stopping the
   timer and sending a S-A.
5) Chunk_output was not being called when a shutdown
   was queued on the v6 side. This is a bug that
   was fixed for v4 at the Munester Inter-op, but we
   missed the V6 side :-<
6) You can use NULL as the to argument in sctp_sendmsg
   for 1to1 style sockets.
7) Performance changes on the sender side of SCTP that
   provide signifigant gains in SACK processing as
   well as on destinations that fill up the ifp queue.